--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js",
-    "gen-doc": "npx documentation build src/jackfish/index.js -f html -o docs"
+    "gen-doc": "npx documentation build src/jackfish/index.js -f html --shallow -o docs"
   },
   "dependencies": {
     "chessboardjs": "^0.0.1",
