--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gen-doc": "npx documentation build src/jackfish/index.js -f html --shallow -o docs"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "chessboardjs": "^0.0.1",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
