--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bootstrap": "^4.1.3",
     "chessboardjs": "^0.0.1",
     "jquery": "^3.3.1",
+    "popper.js": "^1.12.3",
+    "random-js": "^1.0.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
