--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js",
-    "gen-doc": "npx documentation build src/jackfish/index.js -f html --shallow -o docs"
+    "gen-doc": "npx documentation build src/jackfish/index.js -f html --shallow -o docs",
+    "benchmarks": "BABEL_ENV=test npx babel-node test/benchmarks.js"
   },
   "dependencies": {
+    "benchmark": "^2.1.4",
     "bootstrap": "^4.1.3",
     "chessboardjs": "^0.0.1",
     "jquery": "^3.3.1",
