--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "node build/build.js",
     "gen-doc": "npx documentation build src/jackfish/index.js -f html --shallow -o docs",
     "benchmarks": "BABEL_ENV=test npx babel-node test/benchmarks.js",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "deploy": "git push origin `git subtree split --prefix dist master`:gh-pages --force"
   },
   "dependencies": {
     "benchmark": "^2.1.4",
