--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "popper.js": "^1.12.3",
     "random-js": "^1.0.8",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-worker": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
